# github-star-tracker

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  sync.py
app/: chart.py  config.py  database.py  github_api.py
app/templates/: about.html  base.html  dashboard.html  repo.html  search.html
scripts/: setup_env.bat
static/: style.css
