[project]
name = "github-star-history"
version = "0.1.0"
description = "GitHub Star Tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "plotly>=5.22.0",
    "matplotlib>=3.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]
